-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 11-shenandoah, 12, 13
-
Component/s: hotspot
-
b16
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8222609 | 12u-cpu | Roman Kennke | P3 | Resolved | Fixed | master |
| JDK-8222269 | 12.0.2 | Roman Kennke | P3 | Resolved | Fixed | b03 |
Apparently, we're unconditionally calling:
_safepoint_workers->threads_do(tcl);
however, _safepoint_workers may legally be NULL, when ShenandoahParallelSafepointThreasds=1.
_safepoint_workers->threads_do(tcl);
however, _safepoint_workers may legally be NULL, when ShenandoahParallelSafepointThreasds=1.
- backported by
-
JDK-8222269 Shenandoah: Crash when running with ShenandoahParallelSafepointThreads=1
-
- Resolved
-
-
JDK-8222609 Shenandoah: Crash when running with ShenandoahParallelSafepointThreads=1
-
- Resolved
-
- duplicates
-
JDK-8222123 Shenandoah: Crash when running with ShenandoahParallelSafepointThreads=1
-
- Closed
-