8222125: Shenandoah: Crash when running with ShenandoahParallelSafepointThreads=1

Reviewed-by: shade